# OpenGL-Rendering-Master

./: CMakeLists.txt  Camera.cpp  Camera.h  DataProcessing.cpp  DataProcessing.h  Macro.h  MainWindow.cpp  MainWindow.h  MyGLWidget.cpp  MyGLWidget.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
Data/: heart.txt  leftAtrium.txt
Shader/: mesh.frag  mesh.vert  point.frag  point.vert
UI/: MainWindow.ui
